--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script src="https://use.fontawesome.com/5f0a3a0421.js"></script>
 </head>
 <body>
 <header id="top">
@@ -43,7 +44,7 @@
                 </button>
                 <a class="navbar-brand smooth" href="#top">
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 90.2 90.2" style="enable-background:new 0 0 90.2 90.2; width: 35px; fill: #ffffff" xml:space="preserve">
+	 viewBox="0 0 90.2 90.2" style="enable-background:new 0 0 90.2 90.2; width: 50px; fill: #ffffff" xml:space="preserve">
 <style type="text/css">
 	.st0 {
         fill: #ffffff;
@@ -70,7 +71,6 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a class="smooth" href="#about">About</a></li>
                     <li><a class="smooth" href="#team">Team</a></li>
-                    <!--<li><a class="smooth" href="#midgard-zoo">Zoo</a></li>-->
                     <li><a class="smooth" href="#servers">Servers</a></li>
                     <li><a href="http://imgur.com/a/0GWt1" target="_blank">Gallery</a></li>
                     <li><a href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Join Us</a></li>
@@ -86,13 +86,14 @@
                             </li>
                         </ul>
                     </li>
+                    <li id="zoo-cam"><a href="http://www.youtube.com/channel/UCtw4_2ahi3QpRFeWEMlJALg/live">Zoo Cam
+                        <span class="glyphicon glyphicon-record" aria-hidden="true"></span> </a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
     </nav>
 </header>
 <div class="content">
-    <div class="alert alert-info" role="alert"><div class="container"> Check out the brand new <a href="http://www.youtube.com/channel/UCtw4_2ahi3QpRFeWEMlJALg/live" class="alert-link">Zoo Cam!</a></div></div>
     <section id="feature-area">
         <div id="carousel-midgard" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
@@ -106,7 +107,7 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <div id="homeimage4"></div>
+                    <div id="homeimage1"></div>
                     <div class="carousel-caption">
                     </div>
                 </div>
@@ -116,13 +117,13 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div id="homeimage1"></div>
+                    <div id="homeimage3"></div>
                     <!--<img class="img-responsive" src="images/homeslider1.png" alt="...">-->
                     <div class="carousel-caption">
                     </div>
                 </div>
                 <div class="item">
-                    <div id="homeimage3"></div>
+                    <div id="homeimage4"></div>
                     <div class="carousel-caption">
                     </div>
                 </div>
@@ -143,15 +144,17 @@
         <div class="feature-content">
             <div class="container">
                 <h1>6 years of Midgard</h1>
-                <h2>Join our 6 year old community and see what an enhanced vanilla server is like.</p>
-                    <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Submit Whitelist Request</a>
+                <h2>Join our community and see what an enhanced vanilla server is like.</p>
+                    <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Submit
+                        Whitelist Request</a>
             </div>
     </section>
+
     <section class="featured-sections" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h1>About</h1>
+                    <h1>Get to know us.</h1>
                     <p>Midgard is an enhanced vanilla whitelist survival server with heavy emphasis on community. We
                         have
                         been
@@ -169,83 +172,124 @@
     </section>
     <section class="featured-sections" id="team">
         <div class="container">
-            <div class="row">
-                <div class="team-members col-md-3">
-                    <img src="https://minotar.net/avatar/ngtflyer" alt="ngtflyer" class="img-rounded">
-                    <p>NgtFlyer</p>
-                    <img src="https://minotar.net/avatar/nullmatrix" alt="nullmatrix" class="img-rounded">
-                    <p>NullMatrix</p>
-                </div>
-                <div class="team-members col-md-3">
-                    <img src="https://minotar.net/avatar/spinnibbler" alt="spinnibbler" class="img-rounded">
-                    <p>SpinNibbler</p>
-                    <img src="https://minotar.net/avatar/vantes" alt="vantes" class="img-rounded">
-                    <p>Vantes</p>
-                </div>
-                <div class="col-md-6">
-                    <h1>Team</h1>
-                    <p>Midgard is staffed by seasoned pros in the Minecraft space. With IT Professionals running the
-                        back end. And veteran players staffed in game. Midgard will make sure you're in good hands.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--<section class="featured-sections" id="midgard-zoo">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <h1>6 Years of Community</h1>
-                    <p> Started in 2011, Midgard has served it's players with the best enhanced vanilla experience.
-                    </p>
-                </div>
-                <div class="col-md-6">
-                    <img src="images/zoo.png" class="img-responsive" alt="Responsive image">
-                </div>
-            </div>
-        </div>
-    </section>-->
-    <section class="featured-sections" id="servers">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 col-lg-6">
-                    <h1>Servers</h1>
-                </div>
-                <div class="col-md-6 col-lg-6">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6 col-lg-6">
-                    <div class="server-feature" id="minecraft">
-                        <div id="mcimage"></div>
-                        <div class="server-feature-container">
-                            <h2>Minecraft</h2>
-                            <h2>
-                                <small>Survival 1.11.2</small>
-                            </h2>
-                            <p>Midgard's flagship Survival Minecraft server.</p>
-                            <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Submit
-                                Whitelist Request</a>
-                        </div>
+            <div class="team-members-header">
+                <h1>Meet the team.</h1>
+                <div class="row">
+                    <div class="col-md-6">
+                        <p>
+                            Midgard is staffed by seasoned pros in the Minecraft space. With IT Professionals running
+                            the
+                            back end. And veteran players staffed in game. Midgard will make sure you're in good hands.
+                        </p>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-6">
-                    <div class="server-feature" id="tf2">
-                        <div id="tf2image"></div>
-                        <div class="server-feature-container">
-                            <div class="server-text">
-                                <h2>Team Fortress 2</h2>
-                                <p>Midgard's Team Fortress 2 server is open for users who want to take a break from
-                                    Minecraft.</p>
-                                <p>Connection Info:</p>
-                                <code>tf2.midgardmc.com Password: multipass</code>
+            </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <div class="team-members">
+                        <img src="https://minotar.net/avatar/ngtflyer" alt="ngtflyer" class="img-rounded">
+                        <h2>NgtFlyer</h2>
+                        <p>Owner // Admin</p>
+                        <div class="row">
+                            <div class="col-sm-2">
+                                <a href="https://www.twitter.com/ngtflyer"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+                            </div>
+                            <div class="col-sm-2">
+
+                            </div>
+                            <div class="col-sm-2">
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="team-members col-sm-3">
+                    <div class="team-members">
+                        <img src="https://minotar.net/avatar/nullmatrix" alt="nullmatrix" class="img-rounded">
+                        <h2>NullMatrix</h2>
+                        <p>Zoo Keeper // Admin</p>
+                    </div>
+                </div>
+                <div class="team-members col-sm-3">
+                    <div class="team-members">
+                        <img src="https://minotar.net/avatar/spinnibbler" alt="spinnibbler" class="img-rounded">
+                        <h2>SpinNibbler</h2>
+                        <p>Graphic & Web Design Lead // Admin</p>
+                        <div class="row">
+                            <div class="col-sm-2">
+                                <a href="https://www.twitter.com/spinwtf/"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+                            </div>
+                            <div class="col-sm-2">
+                                <a href="https://www.behance.net/calebflatten"><i class="fa fa-behance fa-2x" aria-hidden="true"></i></a>
+                            </div>
+                            <div class="col-sm-2">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="team-members col-sm-3">
+                    <div class="team-members">
+                        <img src="https://minotar.net/avatar/vantes" alt="vantes" class="img-rounded">
+                        <h2>Vantes</h2>
+                        <p>Resident Cool Guy // Admin</p>
+                    </div>
+                </div>
             </div>
         </div>
-    </section>
+</div>
+</section>
+<!--<section class="featured-sections" id="midgard-zoo">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h1>6 Years of Community</h1>
+                <p> Started in 2011, Midgard has served it's players with the best enhanced vanilla experience.
+                </p>
+            </div>
+            <div class="col-md-6">
+                <img src="images/zoo.png" class="img-responsive" alt="Responsive image">
+            </div>
+        </div>
+    </div>
+</section>-->
+<section class="featured-sections" id="servers">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-7 col-lg-7">
+                <h1>See what you're missing.</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 col-lg-6">
+                <div class="server-feature" id="minecraft">
+                    <div id="mcimage"></div>
+                    <div class="server-feature-container">
+                        <h2>Minecraft</h2>
+                        <h2>
+                            <small>Survival 1.11.2</small>
+                        </h2>
+                        <p>Midgard's flagship Survival Minecraft server.</p>
+                        <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Submit
+                            Whitelist Request</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-6">
+                <div class="server-feature" id="tf2">
+                    <div id="tf2image"></div>
+                    <div class="server-feature-container">
+                        <div class="server-text">
+                            <h2>Team Fortress 2</h2>
+                            <p>Midgard's Team Fortress 2 server is open for users who want to take a break from
+                                Minecraft.</p>
+                            <p>Connection Info:</p>
+                            <code>tf2.midgardmc.com Password: multipass</code>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 </div>
 <footer>
     <div class="container">
