--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://use.fontawesome.com/5f0a3a0421.js"></script>
+    <script src="https://mcapi.us/scripts/minecraft.js"></script>
 </head>
 <body>
 <header id="top">
@@ -66,6 +67,9 @@
 	</g>
 </g>
                 </a>
+                <!--<div class="server-status">
+                    <span class="server-online"></span>
+                </div>-->
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -88,6 +92,7 @@
                     </li>
                     <li id="zoo-cam"><a href="http://www.youtube.com/channel/UCtw4_2ahi3QpRFeWEMlJALg/live">Zoo Cam
                         <span class="glyphicon glyphicon-record" aria-hidden="true"></span> </a></li>
+                    <li></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
@@ -195,7 +200,6 @@
                                 <a href="https://www.twitter.com/ngtflyer"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
                             </div>
                             <div class="col-sm-2">
-
                             </div>
                             <div class="col-sm-2">
                             </div>
@@ -347,6 +351,19 @@
     });
 
 
+</script>
+
+<script>
+    MinecraftAPI.getServerStatus('mc.midgardmc.com', {
+        port: 25565 // optional, only if you need a custom port
+    }, function (err, status) {
+        if (err) {
+            return document.querySelector('.server-status').innerHTML = 'Error loading status';
+        }
+
+        // you can change these to your own message!
+        document.querySelector('.server-online').innerHTML = status.online ? 'Online' : 'Offline';
+    });
 </script>
 </body>
 </html>
